<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_message_processer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gregorio@todo.todo">gregorio</maintainer>
  <license>TODO: License declaration</license>

  
 <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_voxel_grid</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>smac_planner</depend>
  <depend>asv_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rosbridge_suite</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
   <depend>ackermann_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
